# khipu-tools

./: 404.html  README.md  ejemplo.py  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: codacy.yml  docs.yml  new_release.yml  tests_coverage.yml
CHANGELOG/: index.html
api/: index.html
contributing/: index.html
khipu_tools/: __init__.py  _api_requestor.py  _api_resource.py  _app_info.py  _banks.py  _base_address.py  _encode.py  _error.py  _error_object.py  _http_client.py  _khipu_client.py  _khipu_object.py  _khipu_response.py  _payments.py  _predict.py  _request_options.py  _requestor_options.py  _util.py  _version.py
pagos-instantaneos/: index.html
search/: search_index.json
tests/: test_banks.py  test_core.py  test_payment.py  test_predict.py
